--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,7 @@
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --purple: 267,95%,43%;
   }
 
   .dark {
@@ -72,6 +73,7 @@
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --purple: 267,95%,43%;
   }
 }
 
